--- a/fylo-data-storage-component-master/index.html
+++ b/fylo-data-storage-component-master/index.html
@@ -5,27 +5,44 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="style.css">
 
   <title>Frontend Mentor | Fylo data storage component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
+  <div class="container">
+    <div id="boxes">
+      <div id="box-1">
+        <div id="logo-icon-div">
+          <img src="images/logo.svg" alt="Logo">
+          <div id="icons">
+            <img src="images/icon-document.svg" alt="document">
+            <img src="images/icon-folder.svg" alt="folder">
+            <img src="images/icon-upload.svg" alt="upload">
+          </div>
+        </div>
+      </div>
 
-  You’ve used 815 GB of your storage
+      <div id="box-2">
+        <div id="headroom">
 
-  185 GB Left
+        </div>
+        <div id="content">
 
-  0 GB
-  1000 GB
+          You’ve used 815 GB of your storage
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Nikolai Pammer</a>.
+          185 GB Left
+
+          0 GB
+          1000 GB
+        </div>
+      </div>
+    </div>
   </div>
+  <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="#">Nikolai Pammer</a>.
+    </div>
+
 </body>
 </html>
