--- a/coding-bootcamp-testimonials-slider-master/index.html
+++ b/coding-bootcamp-testimonials-slider-master/index.html
@@ -1,38 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Coding Bootcamp Testimonials Slider</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./style.css" />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <title>Frontend Mentor | Coding Bootcamp Testimonials Slider</title>
+  </head>
+  <body>
+    <article>
+      <div class="picture-arrows">
+        <img class="img" src="./images/image-tanya.jpg" alt="Tanya" />
+        <div class="arrows">
+          <img class="arrow" src="./images/icon-prev.svg" alt="Prev" />
+          <img class="arrow" src="./images/icon-next.svg" alt="Next" />
+        </div>
+      </div>
+      <div class="content">
+        <h3 class="quote">
+          “ I’ve been interested in coding for a while but never taken the jump,
+          until now. I couldn’t recommend this course enough. I’m now in the job
+          of my dreams and so excited about the future. ”
+        </h3>
+        <div class="name-title">
+          <h4 class="name">Tanya Sinclair</h4>
+          <h4 class="title">UX Engineer</h4>
+        </div>
+      </div>
+      <img class="pattern-bg" src="./images/pattern-bg.svg" alt="" />
+      <img class="pattern-curve" src="./images/pattern-curve.svg" alt="" />
+      <img class="pattern-quotes" src="./images/pattern-quotes.svg" alt="" />
+    </article>
 
-  “ I’ve been interested in coding for a while but never taken the jump, until now. 
-  I couldn’t recommend this course enough. I’m now in the job of my dreams and so 
-  excited about the future. ”
+    <!--
+    “ If you want to lay the best foundation possible I’d recommend taking this
+    course. The depth the instructors go into is incredible. I now feel so
+    confident about starting up as a professional developer. ” John Tarkpor
+    Junior Front-end Developer -->
 
-  Tanya Sinclair
-  UX Engineer
-
-  “ If you want to lay the best foundation possible I’d recommend taking this course. 
-  The depth the instructors go into is incredible. I now feel so confident about 
-  starting up as a professional developer. ”
-
-  John Tarkpor
-  Junior Front-end Developer
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="#">Nikolai Pammer</a>.
+    </div>
+  </body>
 </html>
